--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap");
 
+:root {
+  --primary-color: #047aed;
+}
 * {
   box-sizing: border-box;
   margin: 0;
@@ -34,6 +37,14 @@ img {
   color: #333;
 }
 
+/* ==========
+  Typography
+=============*/
+
+.showcase-title {
+  font-size: 2.5rem;
+}
+
 /* ========
   Layout
 ==========*/
@@ -54,10 +65,47 @@ img {
   height: 100%;
 }
 
+.container-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.card {
+  background-color: #fff;
+  color: #333;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  padding: 1.25em;
+  margin: 0.3125em;
+}
+
+.btn {
+  display: inline-block;
+  background-color: var(--primary-color);
+  color: #fff;
+  border: none;
+  padding: 0.5em 1.75em;
+  margin: 1.5em 0;
+  border-radius: 5px;
+}
+
+.btn-outline {
+  text-decoration: none;
+  background-color: transparent;
+  border: 1px solid #fff;
+}
+
+.btn:hover {
+  transform: scale(0.98);
+}
 /* navigation */
 
 .navbar {
-  background-color: #047aed;
+  background-color: var(--primary-color);
   color: #fff;
   height: 70px;
 }
@@ -79,4 +127,58 @@ img {
 
 .navbar .container-flex {
   justify-content: space-between;
+}
+
+/* Showcase */
+
+.showcase {
+  height: 400px;
+  background-color: var(--primary-color);
+  color: #fff;
+  position: relative;
+}
+
+.showcase::before,
+.showcase::after {
+  content: "";
+  position: absolute;
+  bottom: -70px;
+  background-color: #fff;
+  height: 100px;
+  left: 0;
+  right: 0;
+  transform: skewY(-3deg);
+  -webkit-transform: skewY(-3deg);
+  -moz-transform: skewY(-3deg);
+  -ms-transform: skewY(-3deg);
+}
+
+.showcase-info {
+  margin: 1.25em 0;
+}
+
+.showcase .container-grid {
+  grid-template-columns: 55% 45%;
+  gap: 30px;
+  overflow: visible;
+}
+
+.showcase-form {
+  position: relative;
+  top: 60px;
+  height: 350px;
+  width: 400px;
+  padding: 40px;
+  z-index: 100;
+  justify-self: flex-end;
+}
+
+.form-control input[type="text"],
+.form-control input[type="email"] {
+  border: 0;
+  border-bottom: 1px solid #333;
+  width: 100%;
+  padding: 0.5em 0;
+  margin: 0.5em 0;
+  font-size: 1rem;
 }
