--- a/css/styles.css
+++ b/css/styles.css
@@ -49,59 +49,6 @@ img {
   Layout
 ==========*/
 
-/* general */
-
-.container {
-  max-width: 1100px;
-  margin: 0 auto;
-  overflow: auto;
-  padding: 0 2.5em;
-}
-
-.container-flex {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-}
-
-.container-grid {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 20px;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-}
-
-.card {
-  background-color: #fff;
-  color: #333;
-  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
-  border-radius: 10px;
-  padding: 1.25em;
-  margin: 0.3125em;
-}
-
-.btn {
-  display: inline-block;
-  background-color: var(--primary-color);
-  color: #fff;
-  border: none;
-  padding: 0.5em 1.75em;
-  margin: 1.5em 0;
-  border-radius: 5px;
-}
-
-.btn-outline {
-  text-decoration: none;
-  background-color: transparent;
-  border: 1px solid #fff;
-}
-
-.btn:hover {
-  transform: scale(0.98);
-}
 /* navigation */
 
 .navbar {
@@ -181,4 +128,24 @@ img {
   padding: 0.5em 0;
   margin: 0.5em 0;
   font-size: 1rem;
+}
+
+/* Stats */
+
+.stats {
+  padding-top: 100px;
+}
+
+.stats-heading {
+  max-width: 500px;
+  margin: auto;
+}
+
+.stat-number {
+  font-size: 2.19rem;
+}
+
+.stat-name {
+  font-weight: bold;
+  font-size: 1.25rem;
 }
