--- a/css/utilities.css
+++ b/css/utilities.css
@@ -36,8 +36,10 @@
   margin: 0.3125em;
 }
 
+/* Buttons and colors */
 .btn {
   display: inline-block;
+  text-decoration: none;
   background-color: var(--primary-color);
   color: #fff;
   border: none;
@@ -54,6 +56,52 @@
 
 .btn:hover {
   transform: scale(0.98);
+}
+
+.bg-primary,
+.btn-primary {
+  background-color: var(--primary-color);
+  color: #fff;
+}
+
+.bg-secondary,
+.btn-secondary {
+  background-color: var(--secondary-color);
+  color: #fff;
+}
+
+.bg-dark,
+.btn-dark {
+  background-color: var(--dark-color);
+  color: #fff;
+}
+
+.bg-light,
+.btn-light {
+  background-color: var(--light-color);
+  color: #333;
+}
+
+/* Text sizes */
+
+.lead {
+  font-size: 1.25rem;
+}
+
+.sm {
+  font-size: 1rem;
+}
+
+.md {
+  font-size: 2rem;
+}
+
+.lg {
+  font-size: 3rem;
+}
+
+.xl {
+  font-size: 4rem;
 }
 
 .text-center {
