--- a/css/styles.css
+++ b/css/styles.css
@@ -191,6 +191,34 @@ img {
   transform: translateY(-20px);
 }
 
+/* Features */
+
+.features-head img {
+  width: 200px;
+  justify-self: flex-end;
+}
+
+.features-sub-head img {
+  width: 300px;
+  justify-self: flex-end;
+}
+
+.features-main .card > i {
+  margin: 0 10px;
+}
+
+.features-main .container-grid {
+  padding: 1.875rem;
+}
+
+.features-main .container-grid > *:first-child {
+  grid-column: 1 / span 3;
+}
+
+.features-main .container-grid > *:nth-child(2) {
+  grid-column: 1 / span 2;
+}
+
 /* Footer */
 .footer {
   margin-bottom: 0;
