add docs page and styling

--- a/css/utilities.css
+++ b/css/utilities.css
@@ -82,6 +82,22 @@
   color: #333;
 }
 
+.text-primary {
+  color: var(--primary-color);
+}
+
+.text-secondary {
+  color: var(--secondary-color);
+}
+
+.text-dark {
+  color: var(--dark-color);
+}
+
+.text-light {
+  color: var(--light-color);
+}
+
 /* Text sizes */
 
 .lead {
@@ -190,4 +206,27 @@
 
 .m-5 {
   margin: 4rem;
+}
+
+/* Aleryt */
+
+.alert {
+  background-color: var(--light-color);
+  padding: 10px 20px;
+  font-weight: bold;
+  margin: 15px 0;
+}
+
+.alert i {
+  margin-right: 10px;
+}
+
+.alert-success {
+  background-color: var(--success-color);
+  color: #fff;
+}
+
+.alert-error {
+  background-color: var(--error-color);
+  color: #fff;
 }
