--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,8 @@
   --secondary-color: #1c3fa8;
   --dark-color: #002240;
   --light-color: #f4f4f4;
+  --success-color: #5cb85c;
+  --error-color: #d9534f;
 }
 * {
   box-sizing: border-box;
@@ -30,6 +32,22 @@ p {
 }
 img {
   width: 100%;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: #333;
+}
+
+code,
+pre {
+  background-color: #333;
+  color: #fff;
+  padding: 10px;
 }
 
 .nav-menu {
@@ -219,9 +237,35 @@ img {
   grid-column: 1 / span 2;
 }
 
+/* Docs */
+
+.docs-head img {
+  width: 200px;
+  justify-self: flex-end;
+}
+
+.docs-main h3 {
+  margin: 20px 0;
+}
+
+.docs-main .container-grid {
+  grid-template-columns: 1fr 2fr;
+  align-items: flex-start;
+}
+
+.docs-main nav li {
+  font-size: 17px;
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #ccc;
+}
+
+.docs-main nav li:hover {
+  font-weight: bold;
+}
 /* Footer */
 .footer {
-  margin-bottom: 0;
+  margin: 0;
 }
 .footer-nav-menu {
   list-style: none;
@@ -243,7 +287,16 @@ img {
   .showcase .container-grid,
   .cli .container-grid,
   .stats .container-grid,
-  .cloud .container-grid {
+  .cloud .container-grid,
+  .features-main .container-grid,
+  .docs-main .container-grid,
+  .features-head .container-grid,
+  .docs-head .container-grid {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+  }
+
+  .features-sub-head .container-grid {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
   }
@@ -260,6 +313,23 @@ img {
   .cli .container-grid > *:first-child {
     grid-column: 1;
     grid-row: 1;
+  }
+
+  .features-head,
+  .features-sub-head,
+  .docs-head {
+    text-align: center;
+  }
+
+  .features-head img,
+  .features-sub-head img,
+  .docs-head img {
+    justify-self: center;
+  }
+
+  .features-main .container-grid > *:first-child,
+  .features-main .container-grid > *:nth-child(2) {
+    grid-column: 1;
   }
 }
 
